--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-   <head>
+<html lang="pt-br">
+   <head>   
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,33 +22,32 @@
          </div>
 
          <div class="not-found">
-          <img src="images/404.png">
-          <p>Ooops! Invalid location :/</p>
+            <img src="images/404.png" />
+            <p>Ooops! Invalid location :/</p>
          </div>
 
          <div class="weather-box">
-          <img src="">
-          <p class="temperature"></p>
-          <p class="description"></p>
+            <img src="" />
+            <p class="temperature"></p>
+            <p class="description"></p>
          </div>
 
          <div class="weather-details">
-          <div class="humidity">
-            <i class="fa-solid fa-water"></i>
-            <div class="text">
-              <span></span>
-              <p>Humidity</p>
+            <div class="humidity">
+               <i class="fa-solid fa-water"></i>
+               <div class="text">
+                  <span></span>
+                  <p>humidity</p>
+               </div>
             </div>
-          </div>
-          <div class="wind">
-            <i class="fa-solid fa-wind"></i>
-            <div class="text">
-              <span></span>
-              <p>Wind Speed</p>
+            <div class="wind">
+               <i class="fa-solid fa-wind"></i>
+               <div class="text">
+                  <span></span>
+                  <p>Wind Speed</p>
+               </div>
             </div>
-          </div>
          </div>
-
       </div>
 
       <script
