criação do botão reset

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-   <head>   
+   <head>
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -49,11 +49,13 @@
             </div>
          </div>
       </div>
+      <button id="reset-button">Resetar</button>
 
       <script
          src="https://kit.fontawesome.com/7c8801c017.js"
          crossorigin="anonymous"
       ></script>
       <script src="index.js"></script>
+      <script src="clear.js"></script>
    </body>
 </html>
